# domain-knowledge-management

./: .dockerignore  .env.example  .gitignore  .npmrc  CLAUDE.md  Dockerfile  Dockerfile.processor  QUICKSTART.md  README.md  docker-compose.yml  eslint.config.js  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  proof.md  review-plan.md  review-proof.md  tsconfig.base.json  tsconfig.json  ui-backend-plan.md  vitest.config.ts  vitest.workspace.ts
data/: README.md
modules/enrichment/: README.md  pyproject.toml
modules/enrichment/src/dkm_enrichment/: __init__.py  __main__.py  architecture_classification.py  chunking.py  classification_schemas.py  cli.py  confidence.py  coverage.py  emission.py  entity_normalisation.py  entity_resolution.py  evaluation.py  extraction_schemas.py  llm_resolution.py  models.py  pipeline.py  resolution_schemas.py  schema_validation.py
modules/enrichment/src/dkm_enrichment/gateway/: __init__.py  base.py  claude.py  errors.py  fake.py
modules/enrichment/src/dkm_enrichment/prompts/: __init__.py  library.py
modules/enrichment/src/dkm_enrichment/prompts/templates/: _relationship.v1.md  _system.v1.md  business-capability.v1.md  business-invariant.v1.md  decision.v1.md  decision.v2.md  domain-concept.v1.md  event.v1.md  orchestration-flow.v1.md  orchestration-step.v1.md  reference-data.v1.md  rule.v1.md  state-transition.v1.md  vendor.v1.md
modules/enrichment/tests/: conftest.py  test_architecture_classification.py  test_architecture_classification_eval.py  test_behaviour_edges.py  test_behaviour_end_to_end.py  test_behaviour_eval.py  test_behaviour_prompts.py  test_chunking.py  test_cli.py  test_cli_classify_architecture.py  test_cli_normalise.py  test_confidence_gate.py  test_coverage_normalisation.py  test_cross_validator_parity.py  test_decision_cardinality_gate.py  test_decision_edges.py  test_decision_end_to_end.py  test_decision_escalation.py  test_decision_eval.py  test_decision_prompts.py  test_entity_resolution_merge.py  test_evaluation.py  test_extraction_eval.py  test_extraction_pass_isolation.py  test_gateway_errors.py  test_jsonl_emission.py  test_l2_cross_validator_parity.py  test_llm_gateway_contract.py  test_llm_resolution.py  test_pipeline_end_to_end.py  test_schema_validation_gate.py  test_step_sequencing.py  test_vendor_edges.py  test_vendor_escalation.py  test_vendor_eval.py  test_vendor_extraction.py
(+437 files in other folders)
